--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "ariakit": "^2.0.0-next.41",
     "axios": "^0.26.1",
     "bignumber.js": "^9.1.0",
+    "browserslist": "^4.21.4",
     "classnames": "^2.3.1",
     "echarts": "^5.3.3",
     "ethereum-multicall": "^2.12.0",
