Removed the rest of unnecessary code

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "LlamaPay",
-  "description": "Automate transactions and stream them by the second.",
+  "name": "Morphex",
+  "description": "Morphex Bonds",
   "iconPath": "/favicons/favicon.svg"
 }
