--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "next": "12.1.5",
     "next-themes": "^0.2.0",
     "react": "^18.2.0",
+    "react-countdown": "^2.3.5",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.2.0",
     "react-query": "^3.39.1",
