--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "bignumber.js": "^9.1.0",
     "browserslist": "^4.21.4",
     "classnames": "^2.3.1",
+    "echarts": "^5.4.1",
     "ethereum-multicall": "^2.12.0",
     "ethers": "^5.6.1",
     "lodash.debounce": "^4.0.8",
@@ -24,6 +25,7 @@
     "react": "^18.2.0",
     "react-countdown": "^2.3.5",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.43.1",
     "react-hot-toast": "^2.2.0",
     "react-query": "^3.39.1",
     "react-spinners": "^0.11.0",
