Final touches except for logo

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "Morphex",
-  "description": "Morphex Bonds",
+  "name": "BMX",
+  "description": "oBMX Airdrop",
   "iconPath": "/favicons/favicon.svg"
 }
